fix card not responsive

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,5 +1,5 @@
 .Bcard {
-    width: 40rem;
+    width: 40vw;
     height: auto;
     margin: 10px;
     background-color: #cce3de;
